hphp/hack/test/typecheck/namespace/use_conflict_const2.php.exp
File "use_conflict_const2.php", line 5, characters 11-12:
Cannot declare FOO because the name was explicitly used earlier via a `use' statement on line 3 (Parsing[1002])
