hphp/hack/test/typecheck/namespace/use_conflict_const2.php
<?hh

use const UseNS\FOO;

const int FOO = 0;
